src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AdminSystemType__c</fullName>
        <label>AdminSystemType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminSystemValue__c</fullName>
        <label>AdminSystemValue</label>
        <picklist>
            <picklistValues>
                <fullName>Admin System 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin System 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin System 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR NAMEADDRCHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR REGIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR TRANSFER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR CRUPDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADAPOST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RECALLCAMPAIGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARRANTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMIRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYACURAHOND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISKY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALESFORCEEXACTTARGET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALEFORCEDESK2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELEMATICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIKU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR RTNMAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR UNTMAINT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collapsed_UCIDs__c</fullName>
        <label>Collapsed UCIDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <description>This will be sent back to Salesforce if MDM encounters an error.   It is a concatenation of the SF Id and Last Modified Date Time.</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(LastModifiedDate), &apos;Z&apos;, &apos;.&apos; + MID(TEXT(MOD(MOD(LastModifiedDate - $System.OriginDateTime, 1), 86400)), 3, 3)),&apos;-&apos;,&apos;&apos;),&apos;:&apos;,&apos;&apos;),&apos; &apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;)</formula>
        <label>Correlation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerLoyaltyScore__c</fullName>
        <description>MDM</description>
        <label>Customer Loyalty Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DLR_Email__c</fullName>
        <label>Dealer Email</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DLR_Mail__c</fullName>
        <label>Dealer Mail</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DLR_Phone_Text__c</fullName>
        <description>MDM</description>
        <label>Dealer Phone Text</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DLR_Phone_Voice__c</fullName>
        <label>Dealer Phone Voice</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DLR_Social_Media__c</fullName>
        <label>Dealer Social Media</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Look_up_Postal_Code__c</fullName>
        <formula>TRIM(LEFT(Primary_Postal_Code_Look_Up__c, 3)) &amp; TRIM(RIGHT(Primary_Postal_Code_Look_Up__c, 3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Look-up Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Dealer_Name__c</fullName>
        <formula>Finance_dealer__r.Name</formula>
        <label>Finance Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Integration Field</description>
        <label>Finance Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Finance dealer</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HC_Email__c</fullName>
        <label>CH Email</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HC_Mail__c</fullName>
        <label>CH Mail</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HC_Phone_Text__c</fullName>
        <label>CH Phone Text</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HC_Phone_Voice__c</fullName>
        <label>CH Phone Voice</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HC_Social_Media__c</fullName>
        <label>CH Social Media</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HFS_Email__c</fullName>
        <label>HFS Email</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HFS_Mail__c</fullName>
        <label>HFS Mail</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HFS_Phone_Text__c</fullName>
        <label>HFS Phone Text</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HFS_Phone_Voice__c</fullName>
        <label>HFS Phone Voice</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HFS_Social_Media__c</fullName>
        <label>HFS Social Media</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Active_HFS_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Active HFS Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title_Current__c</fullName>
        <label>Job Title (Current)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title_Previous__c</fullName>
        <label>Job Title (Previous)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalGivenNameOne__c</fullName>
        <encrypted>true</encrypted>
        <label>Legal Given Name One</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalGivenNameTwo__c</fullName>
        <encrypted>true</encrypted>
        <label>Legal Given Name Two</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalSalutation__c</fullName>
        <label>Legal Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Sergeant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prince</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sergeant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sergeant Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Legal Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Primary_Address_AddressUsageValue__c</fullName>
        <description>Passes a static value to CSG.  It is populated by a WF rule because a formula cannot read the encrypted fields that are needed for the criteria.</description>
        <label>MDM Primary Address AddressUsageValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Primary_Address_Start_Date__c</fullName>
        <description>CSG static field.  Only set if the related primary address is filled in.</description>
        <label>MDM Primary Address Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDM_Primary_Email_ContactMethodUsageValu__c</fullName>
        <description>CSG Static field.  Only filled in if the related primary contact method is filled in</description>
        <label>MDM Primary Email ContactMethodUsageValu</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Primary_Email_ContactMethodValue__c</fullName>
        <label>MDM Primary Email ContactMethodValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Primary_Email_Start_Date__c</fullName>
        <description>Passes a static value to CSG. It is populated by a WF rule because a formula cannot read the encrypted fields that are needed for the criteria.</description>
        <label>MDM Primary Email Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDM_Primary_Phone_ContactMethodUsageValu__c</fullName>
        <description>Passes a static value to CSG. It is populated by a WF rule because a formula cannot read the encrypted fields that are needed for the criteria.</description>
        <label>MDM Primary Phone ContactMethodUsageValu</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Primary_Phone_ContactMethodValue__c</fullName>
        <description>Passes a static value to CSG. It is populated by a WF rule because a formula cannot read the encrypted fields that are needed for the criteria.</description>
        <label>MDM Primary Phone ContactMethodValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Primary_Phone_Start_Date__c</fullName>
        <description>Passes a static value to CSG. It is populated by a WF rule because a formula cannot read the encrypted fields that are needed for the criteria.</description>
        <label>MDM Primary Phone Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MaritalStatusValue__c</fullName>
        <label>MaritalStatusValue</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>Organization Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationValue__c</fullName>
        <label>Organization Value</label>
        <picklist>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Will Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Plan Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immobilier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartyLastUpdateDate__c</fullName>
        <label>PartyLastUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PartyLastUpdateUser__c</fullName>
        <label>PartyLastUpdateUser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyType__c</fullName>
        <label>PartyType</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonLastUpdateDate__c</fullName>
        <label>PersonLastUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PersonLastUpdateUser__c</fullName>
        <label>PersonLastUpdateUser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Search__c</fullName>
        <externalId>true</externalId>
        <label>Phone Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredDealerValue__c</fullName>
        <label>PreferredDealerValue</label>
        <picklist>
            <picklistValues>
                <fullName>Original Dealer Code</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreferredLanguage__c</fullName>
        <label>Language Preference</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Français</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Español</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deutsch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italiano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Português (Brasil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian (Bokmal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Portugal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Türkçe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarusian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icelandic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mecedonian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrefixValue__c</fullName>
        <label>PrefixValue</label>
        <picklist>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Postal_Code_Look_Up__c</fullName>
        <label>Primary Postal Code Look Up</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Dealer_Name__c</fullName>
        <formula>Retail_dealer__r.Name</formula>
        <label>Retail Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail dealer</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Dealer_Name__c</fullName>
        <formula>Service_dealer__r.Name</formula>
        <label>Service Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Integration Field</description>
        <label>Service Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service dealer</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolicitationIndicator__c</fullName>
        <label>Solicitation Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SourceIdentifierValue__c</fullName>
        <label>SourceIdentifierValue</label>
        <picklist>
            <picklistValues>
                <fullName>WARRANTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR NAMEADDRCHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR REGIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR TRANSFER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR CRUPDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEALERMASTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODELMASTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADAPOST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RECALLCAMPAIGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMIRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYACURAHOND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISKY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEALERPOSTALCODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALESFORCEEXACTTARGET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALEFORCEDESK2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR RTNMAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODELCATALOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELEMATICS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Split_UCID__c</fullName>
        <label>Split UCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Dealer__c</fullName>
        <label>Start Date Dealer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_Honda__c</fullName>
        <label>Start Date Honda</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <externalId>true</externalId>
        <label>Student ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ToBeDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is a flag to check if the contact needs to be deleted or not</description>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UCID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UCID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_Customers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Customer,Contact.Organization</value>
        </filters>
        <label>All Customers</label>
        <sharedTo>
            <group>Customer_Visible_Groups</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Customers_with_dealers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Customer,Contact.Organization</value>
        </filters>
        <filters>
            <field>Finance_dealer__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Customers with dealers</label>
        <sharedTo>
            <group>Customer_Visible_Groups</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Dealer_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Student_Id__c</columns>
        <columns>Start_Date_Dealer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Dealer_Contact</value>
        </filters>
        <label>All Dealer Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Honda Customer</description>
        <label>Customer</label>
    </recordTypes>
</CustomObject>